<resources>
    <string name="app_name">一笔记账</string>
    <string name="register_simple_account">注册一笔记账账号</string>
    <string name="welcome">欢迎使用</string>
    <string name="welcome_simple_account">欢迎使用一笔记账</string>
    <string name="register">注册</string>
    <string name="simple_accounting">一笔记账</string>
    <string name="account">账号</string>
    <string name="register_login">注册并登录</string>
    <string name="register_login2">注册登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password2">忘记登录密码</string>
    <string name="immediately_login">立即登录</string>
    <string name="reset_password">重置密码</string>
    <string name="reset">刷新</string>
    <string name="email">请输入邮箱</string>
    <string name="verify">请输入验证码</string>
    <string name="password">请输入您的密码</string>
    <string name="set_up_password">请设置新的登录密码</string>
    <string name="new_set_up_password">再次输入新的登录密码</string>
    <string name="get_verify">获取验证码</string>
    <string name="protocol_text">我已阅读并同意《用户协议》和《隐私政策》</string>
    <string name="bill">账单</string>
    <string name="all_categories">全部类别</string>
    <string name="all_expenditure">总支出</string>
    <string name="expenditure">支出</string>
    <string name="all_revenue">总收入</string>
    <string name="revenue">收入</string>
    <string name="add_bill">新增账单</string>
    <string name="bill_identification">票据识别</string>
    <string name="add_manually">手动添加</string>
    <string name="wechat_import">微信导入</string>
    <string name="alipay_import">支付宝导入</string>
    <string name="begin_data">开始日期</string>
    <string name="end_data">结束日期</string>
    <string name="right_arrow"> -> </string>
    <string name="return_page">返回</string>
    <string name="save">保存</string>
    <string name="camera">拍照</string>
    <string name="success">完成</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_dot">.</string>
    <string name="btn_c">c</string>
    <string name="btn_sub">-</string>
    <string name="btn_add">+</string>
    <string name="init_amount">0.00</string>
    <string name="drop_down">下拉</string>
    <string name="select_data">选择日期</string>
    <string name="sure">确定</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>